--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
   "engines": {
     "node": ">= 0.8.0"
   },
-  "license": "MIT",
+  "license": "UTN-LIS",
   "devDependencies": {
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-jshint": "~0.8.0",
-    "grunt-contrib-nodeunit": "~0.3.0",
-    "grunt": "~0.4.2",
-    "jshint-stylish": "~0.1.5",
-    "load-grunt-tasks": "~0.3.0"
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-jshint": "~0.11.2",
+    "grunt-contrib-nodeunit": "~0.4.1",
+    "grunt": "~0.4.5",
+    "jshint-stylish": "~1.0.1",
+    "load-grunt-tasks": "~3.1.0"
   },
   "dependencies":{
-    "esprima": "~2.0.0",
+    "amdefine": "~0.1.0",
     "escodegen": "~1.6.1"
   },
   "scripts": {
