--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,12 @@ language: node_js
 node_js:
   - 0.10
   - 0.12
+  - 4.0
+  - 5.0
 sudo: false
-script: 
+install:
+- npm install
+script:
 - grunt jshint
 - chmod 777 ./test/run-tests.sh
 - cd ./test/
