--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,4 @@ install:
 - npm install
 
 script:
-- grunt jshint
-- chmod 777 ./test/run-tests.sh
-- cd ./test/
-- sh run-tests.sh
+- grunt travis
