--- a/package.json
+++ b/package.json
@@ -19,14 +19,13 @@
     "devDependencies": {
         "grunt-contrib-clean": "~0.7.0",
         "grunt-contrib-jshint": "~0.11.3",
-        "grunt-contrib-nodeunit": "~0.4.1",
+        "grunt-contrib-qunit": "~0.5.1",
         "grunt-contrib-requirejs": "0.4.4",
         "grunt": "~0.4.5",
         "jshint-stylish": "~1.0.1",
         "load-grunt-tasks": "~3.1.0"
     },
     "dependencies": {
-        "amdefine": "~0.1.0",
         "escodegen": "~1.6.1"
     },
     "scripts": {
