--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "load-grunt-tasks": "~3.1.0"
     },
     "dependencies": {
-        "escodegen": "~1.6.1"
+        "escodegen": "1.6.1"
     },
     "scripts": {
         "test": "grunt test"
