--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
   "license": "UTN-LIS",
   "devDependencies": {
     "grunt": "~0.4.5",
-    "grunt-bower-task": "^0.4.0",
     "grunt-contrib-clean": "~0.7.0",
     "grunt-contrib-jshint": "~0.11.3",
     "grunt-contrib-qunit": "~0.5.1",
     "grunt-contrib-requirejs": "0.4.4",
-    "jshint-stylish": "~1.0.1"
+    "jshint-stylish": "~1.0.1",
+    "load-grunt-tasks": "~3.1.0"
   },
   "dependencies": {
     "escodegen": "1.6.1"
