--- a/editor/bower.json
+++ b/editor/bower.json
@@ -1,12 +1,12 @@
 {
     "name": "pumascript-editor",
     "main": "editor.js",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "homepage": "https://github.com/emravera/puma",
     "dependencies": {
-        "jquery": "~1.9.1",
-        "codemirror": "~5.1.0",
-        "bootstrap": "~3.1.1"
+        "jquery": "^1.9.1",
+        "codemirror": "^5.18.2",
+        "bootstrap": "^3.3.7"
     },
     "private": true,
     "ignore": [
