--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "load-grunt-tasks": "~3.1.0"
     },
     "scripts": {
-        "test": "grunt test"
+        "test": "grunt test",
+        "prepublish": "grunt build"
     }
 }
