Exclude dist folder from git and src from npm package
- dist folder is excluded from git repo but it will be generated by build script
and included in the distribution package for npm

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
+# third-party dependencies
 **/node_modules/
 **/bower_components/
+
+# configuration and auto-generated files
 npm-debug.log
 .idea
 .DS_Store
+
+# distribution and generated pumascript.js build, and all the distribution directory
+dist/
