--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
         "grunt-contrib-clean": "~0.7.0",
         "grunt-contrib-jshint": "~0.11.3",
         "grunt-contrib-qunit": "~0.5.1",
-        "grunt-contrib-requirejs": "0.4.4",
+        "grunt-contrib-uglify": "^2.1.0",
+        "grunt-exec": "^1.0.1",
         "jshint-stylish": "~1.0.1",
-        "load-grunt-tasks": "~3.1.0"
+        "load-grunt-tasks": "~3.1.0",
+        "webpack": "^2.2.1"
     },
     "scripts": {
         "test": "grunt test",
