--- a/editor/package.json
+++ b/editor/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pumascript-editor",
   "version": "0.1.0",
-  "description": "Installs Puma dependencies using NPM",
+  "description": "Installs Puma Editor dependencies",
   "main": "editor.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
