--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
         "escodegen": "1.6.1"
     },
     "devDependencies": {
+        "eslint": "^4.8.0",
         "grunt": "0.4.5",
         "grunt-contrib-clean": "0.7.0",
-        "grunt-contrib-jshint": "0.11.3",
         "grunt-contrib-qunit": "0.5.1",
         "grunt-contrib-uglify": "2.1.0",
+        "grunt-eslint": "^20.1.0",
         "grunt-exec": "1.0.1",
-        "jshint-stylish": "1.0.1",
         "load-grunt-tasks": "3.1.0",
         "webpack": "2.2.1"
     },
