--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "license": "MIT",
     "dependencies": {
         "commander": "2.9.0",
-        "escodegen": "1.6.1"
+        "escodegen": "^1.9.0"
     },
     "devDependencies": {
         "eslint": "^4.8.0",
