--- a/package.json
+++ b/package.json
@@ -31,18 +31,20 @@
     },
     "license": "MIT",
     "dependencies": {
-        "commander": "2.9.0",
+        "commander": "2.11.0",
         "escodegen": "1.6.1"
     },
     "devDependencies": {
         "eslint": "^4.8.0",
-        "grunt": "0.4.5",
-        "grunt-contrib-clean": "0.7.0",
+        "grunt": "1.0.1",
+        "grunt-contrib-clean": "1.1.0",
         "grunt-contrib-qunit": "0.5.1",
-        "grunt-contrib-uglify": "2.1.0",
+        "grunt-contrib-uglify": "3.1.0",
         "grunt-eslint": "^20.1.0",
-        "grunt-exec": "1.0.1",
-        "load-grunt-tasks": "3.1.0",
+        "grunt-exec": "3.0.0",
+        "load-grunt-tasks": "3.5.2",
+        "node-qunit-phantomjs": "1.6.0",
+        "qunitjs":"2.4.1",
         "webpack": "2.2.1"
     },
     "scripts": {
